[gd_scene load_steps=16 format=3 uid="uid://bu28kwqtn6cdg"]

[ext_resource type="Script" uid="uid://cjoo1hy85e5ad" path="res://scenes/fancy_display_scene.gd" id="1_jfrc1"]
[ext_resource type="Script" uid="uid://ctx3fbd4vqf5t" path="res://scenes/scalable_sub_viewport.gd" id="2_k48ro"]
[ext_resource type="Shader" uid="uid://okxo3d88kn1h" path="res://shaders/screen_blur.gdshader" id="2_rpd8y"]
[ext_resource type="Shader" uid="uid://egeyyolvm0rs" path="res://shaders/panel_blur.gdshader" id="4_y8ora"]
[ext_resource type="Texture2D" uid="uid://ras5y3yqijkx" path="res://assets/m8_screen_placeholder.png" id="5_ihehy"]

[sub_resource type="Gradient" id="Gradient_gskhf"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ee18n"]
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uag16"]
width = 2048
height = 2048
invert = true
color_ramp = SubResource("Gradient_gskhf")
noise = SubResource("FastNoiseLite_ee18n")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rqrn1"]
shader = ExtResource("2_rpd8y")
shader_parameter/blur_amount = 3.5
shader_parameter/tint_color = Color(1, 1, 1, 1)
shader_parameter/tint_amount = 1.0
shader_parameter/brightness = 0.9
shader_parameter/noise_texture = SubResource("NoiseTexture2D_uag16")
shader_parameter/noise_strength = 0.015
shader_parameter/noise_speed = 0.0

[sub_resource type="Gradient" id="Gradient_2ccln"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_np6uh"]
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_5dadj"]
width = 2048
height = 2048
invert = true
color_ramp = SubResource("Gradient_2ccln")
noise = SubResource("FastNoiseLite_np6uh")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1b4h"]
shader = ExtResource("4_y8ora")
shader_parameter/blur_amount = 5.231
shader_parameter/panel_color = Color(0, 0, 0, 1)
shader_parameter/panel_opacity = 1.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_5dadj")
shader_parameter/noise_strength = 0.005

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_410rj"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 6
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_k66bi"]
atlas = ExtResource("5_ihehy")
region = Rect2(0, 0, 320, 240)

[node name="M8Scene" type="Node3D"]
script = ExtResource("1_jfrc1")
metadata/_edit_vertical_guides_ = [640.0]
metadata/_edit_horizontal_guides_ = [480.0]

[node name="BGVideoStreamPlayer" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
volume_db = -80.0
expand = true
loop = true

[node name="CenterContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="CenterContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="CenterContainer/SubViewportContainer"]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(640, 480)
size_2d_override = Vector2i(640, 480)
size_2d_override_stretch = true
render_target_update_mode = 4
script = ExtResource("2_k48ro")
integer_scale = 1

[node name="BackgroundColorRect" type="ColorRect" parent="CenterContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTextureRect" type="TextureRect" parent="CenterContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
texture_filter = 2
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 6

[node name="BackgroundShader" type="ColorRect" parent="CenterContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_rqrn1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="CenterContainer/SubViewportContainer/SubViewport"]
copy_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_y1b4h")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -136.0
offset_right = 176.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_410rj")

[node name="DisplayTextureRect" type="TextureRect" parent="CenterContainer/SubViewportContainer/SubViewport/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(320, 240)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_k66bi")
expand_mode = 1
stretch_mode = 6
